--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>晚餐抽籤小幫手</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/output.css">
 </head>
 <body>
-    <div class="container">
-        <h1>晚餐抽籤小幫手</h1>
-        <div id="result" class="result"></div>
-        <div class="buttons">
-            <button id="start">開始抽籤</button>
-            <button id="stop">停止抽籤</button>
+    <header class="sticky top-0 z-10 card-glass border-b border-slate-700/60">
+        <div class="mx-auto max-w-screen-lg px-6 py-4 flex items-center justify-between">
+            <div class="flex items-center gap-3">
+                <div class="h-8 w-8 rounded-full bg-gradient-to-br from-[--color-primary] to-[--color-accent] shadow-[--shadow-neon]"></div>
+                <span class="text-sm text-[--color-text-muted]">晚餐抽籤小幫手</span>
+            </div>
+            <a href="#" class="btn-outline text-sm">關於</a>
         </div>
-    </div>
+    </header>
+
+    <main class="mx-auto max-w-screen-lg px-6">
+        <section class="text-center py-14">
+            <h1 class="text-4xl sm:text-5xl font-semibold tracking-tight">今晚吃什麼？</h1>
+            <p class="mt-3 text-[--color-text-muted]">按下開始，讓霓虹為你做決定。</p>
+        </section>
+
+        <section class="card-glass px-6 py-8">
+            <div id="result" class="result text-3xl font-semibold text-center py-8 rounded-[--radius-lg] border border-slate-700/60 bg-black/10"></div>
+            <div class="mt-6 flex items-center justify-center gap-4">
+                <button id="start" class="btn-primary">開始抽籤</button>
+                <button id="stop" class="btn-outline">停止抽籤</button>
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
